# zeno

./: Cargo.toml  DESIGN.md  README.md  config.example.lua  config.example.yaml
crates/zeno-protocol/: Cargo.toml
crates/zeno-protocol/src/: events.rs  lib.rs  submission.rs  usage.rs
crates/zeno-tools/: Cargo.toml
crates/zeno-tools/src/: definition.rs  exposure.rs  lib.rs  output.rs
docs/plans/: phase1-skeleton-chat.md
lua/: hindsight.lua
skills/builtin/: DESCRIPTION.md
skills/builtin/file-reading-strategy/: SKILL.md
skills/builtin/skill-best-practices/: SKILL.md
skills/builtin/skill-best-practices/references/: anti-patterns.md  checklist.md  content-guidelines.md  core-principles.md  evaluation.md  executable-skills.md  mcp-tools.md  patterns.md  progressive-disclosure.md  structure.md  workflows.md
skills/builtin/skill-usage-workflow/: SKILL.md
src/: main.rs
src/acp/: mod.rs  server.rs
src/api/: anthropic.rs  client.rs  mod.rs  openai.rs  retry.rs  sse.rs  types.rs
src/auth/: key_store.rs
src/auxiliary/: cache.rs  client.rs  compressor.rs  mod.rs  router.rs  session_search.rs  vision.rs  web_fetch.rs
src/cli/: commands.rs
src/config/: loader.rs  mod.rs  model_context.rs  paths.rs  settings.rs  watcher.rs
src/engine/: carryover.rs  compact.rs  cost_tracker.rs  curator.rs  messages.rs  mod.rs  query.rs  query_engine.rs  review.rs  session.rs  stream_events.rs  sub_agent.rs  tui_events.rs
src/engine/query/: json_utils.rs  mod.rs  tool_display.rs  tool_exec.rs
src/gateway/: commands.rs  dispatch.rs  events.rs  mod.rs  sub_agent.rs  transport.rs
src/gateway/handlers/: config.rs  mod.rs  prompt.rs  session.rs  slash.rs
src/hooks/: executor.rs  loader.rs  mod.rs  types.rs
src/mcp/: manager.rs  mod.rs  tools.rs
src/memory/: lua_provider.rs  manager.rs  mod.rs  provider.rs  store.rs  threat_patterns.rs
src/permissions/: checker.rs  execpolicy.rs  mod.rs
src/plugin/: bridge.rs  mod.rs  sandbox.rs
src/prompts/: claudemd.rs  context.rs  mod.rs  system_prompt.rs
src/sandbox/: config.rs  linux.rs  mod.rs
src/skills/: builtin.rs  index_cache.rs  loader.rs  mod.rs  provenance.rs  registry.rs  types.rs  usage.rs  validation.rs
src/store/: agent_graph.rs  json_graph.rs  mod.rs
src/tools/: ask_user.rs  base.rs  bash.rs  cache.rs  config_tool.rs  delegate_task.rs  edit.rs  file_content_pool.rs  file_edit.rs  file_read.rs  file_state.rs  file_write.rs  gitignore.rs  glob.rs  grep.rs  list_sub_agents.rs  mcp.rs  memory.rs  memory_provider_tool.rs  mod.rs  path_safety.rs  rate_limiter.rs  read.rs  registry.rs  skill_list.rs  skill_manage.rs  skill_view.rs  todo.rs  tool_search.rs  tool_stats.rs  web_fetch.rs  web_search.rs  write.rs
src/tools/command_safety/: mod.rs  parser.rs  safe_commands.rs
src/ui/: app.rs  component.rs  graph_panel.rs  input.rs  markdown.rs  mod.rs  output.rs  permission_overlay.rs  side_panel.rs  status_bar.rs  theme.rs  title_bar.rs
src/ui/input/: clipboard.rs  completion.rs  editor.rs  history.rs  mod.rs  paste.rs
src/ui/output/: cache.rs  mod.rs  render.rs  segment.rs
src/ui/wrap/: mod.rs  prefix.rs  span.rs  stream.rs  word.rs
src/utils/: diff.rs  mod.rs  time.rs
