[package]
name = "zeno"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP + SSE
reqwest = { version = "0.13", features = ["stream", "json"] }
eventsource-stream = "0.2"
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"  # 仍用于 skill frontmatter 解析

# Lua 配置 + 插件
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }

# 错误处理
anyhow = "1"
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 其他
dirs = "6"
async-trait = "0.1"
base64 = "0.22"
html2text = "0.14"
rand = "0.8"
hostname = "0.4"
once_cell = "1"
url = "2"
fs2 = "0.4"  # file locking for memory store (cross-process safety)

# Tool dependencies
walkdir = "2"
regex = "1"
which = "7"
urlencoding = "2"

# MCP client (Model Context Protocol)
rmcp = { version = "1.6", features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "which-command"] }
tokio-stream = "0.1"

# TUI
ratatui = "0.30"
crossterm = "0.28"
syntect = "5"
unicode-width = "0.2"
pulldown-cmark = "0.13"
tokio-util = { version = "0.7.18", features = ["rt"] }

# IndexMap (ordered map for skill categories)
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
